--- a/transportation/templates/home_page.html
+++ b/transportation/templates/home_page.html
@@ -104,7 +104,7 @@
         <script async src="https://app.meteolabs.by/js/?id=ml_17d8bed2"></script>
     </div>
     <div class="col-md-5">
-        <img src="https://images.ru.prom.st/567734690_567734690.jpg?PIMAGE_ID=567734690" class="img-fluid">
+        <img src="https://translogist.su/7_dorog_sem_dorog.png" class="img-fluid">
     </div>
     <div class="col-md-4"><br>
         <div class="row">
