--- a/transportation/templates/orders.html
+++ b/transportation/templates/orders.html
@@ -12,19 +12,22 @@
     </div>
     <div class="list-group list-group-flush border-bottom scrollarea">
       {% for order in orders %}
-      {% if order.transport == '' %}
+      {% if not order.transport%}
       <a href="{% url 'edit-order' order_id=order.id %}" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
         <div class="d-flex w-100 align-items-center justify-content-between">
           <strong class="mb-1">Заявка №{{order.id}} | Маршрут: {{order.load_place}} - {{order.unload_place}}</strong>
           <small>{{order.created_date}}</small>
         </div>
-        <div class="d-flex w-100 align-items-center justify-content-between">Груз: {{order.cargo}} Масса: {{order.weight}}  Авто: {{order.transport}} Ставка: {{order.rates}}
-          {% if order.tax%} с НДС {% else %} без НДС {% endif %}
+        <div class="d-flex w-100 align-items-center justify-content-between">Груз: {{order.cargo}} Масса: {{order.weight}}
           {% for key, val in  duration.items%}
           {% if key == order.id %}
           <small>Продолжительность: {{val}}</small>
           {% endif %}
           {% endfor %}
+        </div>
+        <div class="col-10 mb-1 small">
+          Ставка: {{order.rates}}
+          {% if order.tax%} с НДС {% else %} без НДС {% endif %}
         </div>
         <div class="col-10 mb-1 small">
           Авто: не указано
@@ -51,8 +54,7 @@
           <strong class="mb-1">Заявка №{{order.id}} | Маршрут: {{order.load_place}} - {{order.unload_place}}</strong>
           <small>{{order.created_date}}</small>
         </div>
-        <div class="d-flex w-100 align-items-center justify-content-between">Груз: {{order.cargo}} Масса: {{order.weight}}  Авто: {{order.transport}} Ставка: {{order.rates}}
-          {% if order.tax%} с НДС {% else %} без НДС {% endif %}
+        <div class="d-flex w-100 align-items-center justify-content-between">Груз: {{order.cargo}} Масса: {{order.weight}}
           {% for key, val in  duration.items%}
           {% if key == order.id %}
           <small>Продолжительность: {{val}}</small>
@@ -60,7 +62,11 @@
           {% endfor %}
         </div>
         <div class="col-10 mb-1 small">
-          Авто: {{order.transport}}
+          Ставка: {{order.rates}}
+          {% if order.tax%} с НДС {% else %} без НДС {% endif %}
+        </div>
+        <div class="col-10 mb-1 small">
+          Авто: {{order.transport.reg_number}}
         </div>
 
       </a>
