Added logic for trailers and drivers

--- a/transportation/templates/home_page.html
+++ b/transportation/templates/home_page.html
@@ -138,7 +138,7 @@
         <div class="row">
             <br>
             <img src="https://minsk.gov.by/images/org/8643/20220112-egr.jpg" class="img-fluid">
-            <p>Получение информаиции о субъекте хозяйствования из ЕГР Республики Беларусь:</p>
+            <p>Получение информаиции о субъекте хозяйствования из ЕГР Республикви Беларусь:</p>
         </div>
 
 
