--- a/transportation/templates/home_page.html
+++ b/transportation/templates/home_page.html
@@ -125,12 +125,12 @@
                 <tr>
                     <th scope="row">2</th>
                     <td>{{exchange_data.EUR.1}} EUR</td>
-                    <td>{{exchange_data.USD.0}}</td>
+                    <td>{{exchange_data.EUR.0}}</td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
-                    <td>{{exchange_data.EUR.1}} RUB</td>
-                    <td>{{exchange_data.EUR.0}}</td>
+                    <td>{{exchange_data.RUB.1}} RUB</td>
+                    <td>{{exchange_data.RUB.0}}</td>
                 </tr>
                 </tbody>
             </table>
