--- a/transportation/templates/add_additional_order.html
+++ b/transportation/templates/add_additional_order.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
+{% block title %}Additional order{% endblock %}
+
 {% block body %}
 
 <main class="container container-small w-50 h-50">
