--- a/transportation/templates/edit_drivers.html
+++ b/transportation/templates/edit_drivers.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
+{% block title %}Edit drivers{% endblock %}
+
 {% block body %}
 
 <main class="container container-small w-50 h-50">
@@ -12,9 +14,9 @@
             {{ form|crispy }}
 
             <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-                <button type="submit" class="btn btn-primary">{% if action %}Сохранить{% else %}Добавить{% endif %}</button>
+                <button type="submit" class="btn btn-primary">Редактировать</button>
                 <a type="button" class="btn btn-secondary" href="{% url 'drivers' %}">Вернуться</a>
-                <a type="button" class="btn btn-secondary" href="{% url 'drivers' %}">Удалить</a>
+                <a type="button" class="btn btn-danger" href="{% url 'delete-driver' driver_id=driver.id %}">Удалить</a>
             </div>
 
         </form>
