--- a/transportation/templates/home_page.html
+++ b/transportation/templates/home_page.html
@@ -1,88 +1,11 @@
 {%extends 'base.html'%}
+{% load crispy_forms_tags %}
 
 {% block title %}Cargo transportation{% endblock %}
+
 {% block body %}
+
 {% if user.is_authenticated  %}
-<!-- <div class="container-fluid">
-    <div class="row gy-5">
-        <div class="col-12">
-
-            <div
-                    class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white"
-                    style="background-image: url('https://schiffmannlaw.ca/wp-content/uploads/2019/03/practicticearea-sub-banner.jpg');"
-            >
-                <h1 class="mb-3 h2">Jumbotron</h1>
-
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus praesentium
-                    labore accusamus sequi, voluptate debitis tenetur in deleniti possimus modi voluptatum
-                    neque maiores dolorem unde? Aut dolorum quod excepturi fugit.
-                </p>
-            </div>
-
-        </div>
-        <div class="col-6 text-center">
-            <div class="badge bg-primary text-wrap" style="width: 40rem;">
-                The majority of trucks currently in use are still powered by diesel engines, although small- to
-                medium-size trucks with gasoline engines exist in the US, Canada, and Mexico. The market-share of
-                electrically-powered trucks is growing rapidly, expected to reach 7% globally by 2027, and electric
-                motive force already predominates among both the largest and smallest trucks.[2] In the European Union,
-                vehicles with a gross combination mass of up to 3.5 t (3.4 long tons; 3.9 short tons) are known as light
-                commercial vehicles, and those over as large goods vehicles.
-            </div>
-        </div>
-        <div class="col-6 text-center">
-
-            <div class="badge bg-success text-wrap" style="width: 40rem;">
-                The majority of trucks currently in use are still powered by diesel engines, although small- to
-                medium-size trucks with gasoline engines exist in the US, Canada, and Mexico. The market-share of
-                electrically-powered trucks is growing rapidly, expected to reach 7% globally by 2027, and electric
-                motive force already predominates among both the largest and smallest trucks.[2] In the European Union,
-                vehicles with a gross combination mass of up to 3.5 t (3.4 long tons; 3.9 short tons) are known as light
-                commercial vehicles, and those over as large goods vehicles.
-            </div>
-
-
-        </div>
-        <div class="col-12">
-
-
-            <div
-                    class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white"
-                    style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
-            >
-                <h1 class="mb-3 h2">Jumbotron</h1>
-
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus praesentium
-                    labore accusamus sequi, voluptate debitis tenetur in deleniti possimus modi voluptatum
-                    neque maiores dolorem unde? Aut dolorum quod excepturi fugit.
-                </p>
-            </div>
-
-
-        </div>
-        <div class="col-6">
-            <h1 class="mb-3 h2">Jumbotron</h1>
-
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus praesentium
-                labore accusamus sequi, voluptate debitis tenetur in deleniti possimus modi voluptatum
-                neque maiores dolorem unde? Aut dolorum quod excepturi fugit.
-            </p>
-        </div>
-        <div class="col-6">
-            <h1 class="mb-3 h2">Jumbotron</h1>
-
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus praesentium
-                labore accusamus sequi, voluptate debitis tenetur in deleniti possimus modi voluptatum
-                neque maiores dolorem unde? Aut dolorum quod excepturi fugit.
-            </p>
-        </div>
-    </div>
-</div> -->
-
 <div class="row">
     <div class="col-md-3">
         <br>
@@ -139,6 +62,15 @@
             <br>
             <img src="https://minsk.gov.by/images/org/8643/20220112-egr.jpg" class="img-fluid">
             <p>Получение информаиции о субъекте хозяйствования из ЕГР Республикви Беларусь:</p>
+             <form method="post">
+                    {% csrf_token %}
+                   {{ form|crispy }}
+            <br>
+             <button type="submit" class="btn btn-primary">Получить информацию</button>
+
+
+
+                </form>
         </div>
 
 
@@ -155,31 +87,83 @@
                      src="https://egr.gov.by/egrn/images/456.png"
                      alt="Generic placeholder image" width="140" height="140">
                 <h2>Информация из ЕГР Республики Беларусь</h2>
-                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
-                    vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
-                    cursus magna.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">Просмотреть детали »</a></p>
+                <p>Получение общих данных о субъекте хозяйствования. API получения данных из Единого государственного
+                    регистра юридических лиц и индивидуальных предпринимателей.</p>
+                <p><button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#EGR"
+                            data-bs-whatever="@mdo">Просмотреть детали »</button></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle"
                      src="https://komplemir.by/templates/corporate/site/img/buttom_calculation.png"
                      alt="Generic placeholder image" width="140" height="140">
                 <h2>Расчет времени и стоимости доставки</h2>
-                <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras
-                    mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                    condimentum nibh.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">Просмотреть детали »</a></p>
+                <p>Автоматический расчет времени и стоимости поездки на основании данных о расстоянии полученных при
+                    помощи OSM API — бесплатной географической карты мира.</p>
+                <p><button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#Calc"
+                            data-bs-whatever="@mdo">Просмотреть детали »</button></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle"
                      src="https://manjur-express.ru/uploads/images/bimages/1603462626.png"
                      alt="Generic placeholder image" width="140" height="140">
                 <h2>Отслеживание свободного транспорта и грузов</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
-                    porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh,
-                    ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">Просмотреть детали »</a></p>
+                <p>Программа позволяет отслеживать выполняемые заявки, и заявки которые нходятся в очереди. При
+                    регистрации заявок предлагаются только свободные ТС.</p>
+                <p><button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#Free"
+                            data-bs-whatever="@mdo">Просмотреть детали »</button></p>
             </div><!-- /.col-lg-4 -->
+
+
+
+            <div class="modal fade" id="EGR" tabindex="-1" aria-labelledby="EGRLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="EGRLabel">Детальная информация:</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>
+                                Получение общих данных о субъекте хозяйствования. API получения данных из Единого государственного регистра юридических лиц и индивидуальных предпринимателей.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade" id="Calc" tabindex="-1" aria-labelledby="CalcLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="CalcLabel">Детальная информация:</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>
+                                Автоматический расчет времени и стоимости поездки на основании данных о расстоянии полученных при
+                    помощи OSM API — бесплатной географической карты мира.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade" id="Free" tabindex="-1" aria-labelledby="FreeLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="FreeLabel">Детальная информация:</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>
+                                Программа позволяет отслеживать выполняемые заявки, и заявки которые нходятся в очереди. При
+                    регистрации заявок предлагаются только свободные ТС.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
         <br>
         <br>
